--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -144,6 +144,16 @@
         "configuration": "./mcfunction-language-configuration.json"
       },
       {
+        "id": "mcbuild",
+        "aliases": [
+          "mc-build"
+        ],
+        "extensions": [
+          ".mcb"
+        ],
+        "configuration": "./mc-build-language-configuration.json"
+      },
+      {
         "id": "mcdoc",
         "extensions": [
           ".mcdoc"
